--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,38 @@
     <script type="text/javascript" src="../libs/util/dat.gui.js"></script>
     <script type="text/javascript" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" src="../libs/util/util.js"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
+    <script type="text/javascript" src="../js/CameraLumiere.js"></script>
 </head>
-<body>
-    <script src="../js/script.js" type="module"></script>
+<body onload="init()">
+    <div id="webgl"></div>
+    <form id="controle">
+      <fieldset>
+        <legend>Contrôle de la caméra et affichage du repère</legend>
+        <div>
+          <table id="TableauCamera">
+          <tr>
+            <th>Géométrie</th>
+            <th>Abscisse</th>
+            <th>Ordonnée</th>
+            <th>Cote</th>
+          </tr>
+          <tr>
+            <td>Position</td>
+            <td><input type="number" id="PosX"  name="PosX" min="-20" max="20" step="0.25" value="0"  /></td>
+            <td><input type="number" id="PosY"  name="PosY" min="-20" max="20" step="0.25" value="-4"  /></td>
+            <td><input type="number" id="PosZ"  name="PosZ" min="-20" max="20" step="0.25" value="0"  /></td>
+          </tr>
+          <tr>
+            <td>Direction</td>
+            <td><input type="number" id="DirX"  name="DirX" min="-20" max="20" step="0.25" value="0"  /></td>
+            <td><input type="number" id="DirY"  name="DirY" min="-20" max="20" step="0.25" value="0"  /></td>
+            <td><input type="number" id="DirZ"  name="DirZ" min="-20" max="20" step="0.25" value="0.5"  /></td>
+          </tr>
+          </table>          
+        </div>
+      </fieldset>
+    </form>
+    <p id="result"></p>
 </body>
 </html>
